--- a/iOS_NIM/Base.lproj/Main.storyboard
+++ b/iOS_NIM/Base.lproj/Main.storyboard
@@ -309,13 +309,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max matches" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sej-GW-p4u">
-                                <rect key="frame" x="16" y="138.5" width="103" height="21"/>
+                                <rect key="frame" x="16" y="128.5" width="103" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="CE8-35-J0Q">
-                                <rect key="frame" x="238" y="135.5" width="121" height="29"/>
+                                <rect key="frame" x="238" y="125.5" width="121" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="121" id="cfN-F9-D1B"/>
                                 </constraints>
@@ -328,19 +328,19 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1 name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgA-9W-6bl">
-                                <rect key="frame" x="16" y="188" width="106" height="21"/>
+                                <rect key="frame" x="16" y="168" width="106" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 2 name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5iD-gc-dcP">
-                                <rect key="frame" x="16" y="238" width="108" height="21"/>
+                                <rect key="frame" x="16" y="208" width="108" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BCI-aa-aEx">
-                                <rect key="frame" x="238" y="183.5" width="121" height="30"/>
+                                <rect key="frame" x="238" y="163.5" width="121" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="player1NameTextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -350,7 +350,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2kY-wC-XBX">
-                                <rect key="frame" x="238" y="233.5" width="121" height="30"/>
+                                <rect key="frame" x="238" y="203.5" width="121" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="player2NameTextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -360,13 +360,13 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who plays first?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uc6-Km-Eoz">
-                                <rect key="frame" x="16" y="287" width="122" height="21"/>
+                                <rect key="frame" x="16" y="247" width="122" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dMb-4Y-C8v">
-                                <rect key="frame" x="168" y="283.5" width="191" height="29"/>
+                                <rect key="frame" x="168" y="243.5" width="191" height="29"/>
                                 <segments>
                                     <segment title="Player 1"/>
                                     <segment title="Player 2"/>
@@ -377,7 +377,7 @@
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KtZ-Tb-wzi">
-                                <rect key="frame" x="139" y="617" width="98" height="30"/>
+                                <rect key="frame" x="138.5" y="637" width="98" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="resetSettingsButton"/>
                                 <state key="normal" title="Reset settings"/>
                                 <connections>
@@ -385,7 +385,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tuz-6S-VrY">
-                                <rect key="frame" x="163" y="354.5" width="49" height="30"/>
+                                <rect key="frame" x="163" y="587" width="49" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="closeSettingsButton"/>
                                 <state key="normal" title="Fermer"/>
                                 <connections>
@@ -395,16 +395,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="KtZ-Tb-wzi" firstAttribute="top" secondItem="tuz-6S-VrY" secondAttribute="bottom" constant="20" id="8os-wV-2kE"/>
                             <constraint firstItem="MgA-9W-6bl" firstAttribute="centerY" secondItem="BCI-aa-aEx" secondAttribute="centerY" id="AtJ-qR-cge"/>
                             <constraint firstItem="2kY-wC-XBX" firstAttribute="trailing" secondItem="BCI-aa-aEx" secondAttribute="trailing" id="BS4-ht-ffl"/>
                             <constraint firstItem="Uc6-Km-Eoz" firstAttribute="centerY" secondItem="dMb-4Y-C8v" secondAttribute="centerY" id="EPj-WQ-ex4"/>
                             <constraint firstItem="5iD-gc-dcP" firstAttribute="leading" secondItem="MgA-9W-6bl" secondAttribute="leading" id="ETI-xl-UZW"/>
                             <constraint firstItem="BCI-aa-aEx" firstAttribute="width" secondItem="CE8-35-J0Q" secondAttribute="width" id="Gpa-I8-6kq"/>
                             <constraint firstItem="B5r-yZ-f9j" firstAttribute="leading" secondItem="9FM-yC-ZtG" secondAttribute="trailing" id="Gz4-0M-rnS"/>
-                            <constraint firstItem="dMb-4Y-C8v" firstAttribute="top" secondItem="2kY-wC-XBX" secondAttribute="bottom" constant="20" id="HXV-RE-YSR"/>
+                            <constraint firstItem="dMb-4Y-C8v" firstAttribute="top" secondItem="2kY-wC-XBX" secondAttribute="bottom" constant="10" id="HXV-RE-YSR"/>
                             <constraint firstItem="tuz-6S-VrY" firstAttribute="centerX" secondItem="15J-6v-8jL" secondAttribute="centerX" id="My5-cC-XS1"/>
                             <constraint firstItem="dMb-4Y-C8v" firstAttribute="trailing" secondItem="2kY-wC-XBX" secondAttribute="trailing" id="PCO-D5-CjT"/>
-                            <constraint firstItem="BCI-aa-aEx" firstAttribute="top" secondItem="CE8-35-J0Q" secondAttribute="bottom" constant="20" id="RtN-Kn-fxV"/>
+                            <constraint firstItem="BCI-aa-aEx" firstAttribute="top" secondItem="CE8-35-J0Q" secondAttribute="bottom" constant="10" id="RtN-Kn-fxV"/>
                             <constraint firstItem="sej-GW-p4u" firstAttribute="centerY" secondItem="CE8-35-J0Q" secondAttribute="centerY" id="U9A-aO-SfT"/>
                             <constraint firstItem="x1r-zz-EVF" firstAttribute="centerX" secondItem="15J-6v-8jL" secondAttribute="centerX" id="UXm-Az-eWq"/>
                             <constraint firstItem="sej-GW-p4u" firstAttribute="leading" secondItem="9FM-yC-ZtG" secondAttribute="leading" id="YXE-CX-aTq"/>
@@ -412,17 +413,16 @@
                             <constraint firstItem="9FM-yC-ZtG" firstAttribute="centerY" secondItem="B5r-yZ-f9j" secondAttribute="centerY" id="b8p-2a-8sQ"/>
                             <constraint firstItem="BCI-aa-aEx" firstAttribute="trailing" secondItem="CE8-35-J0Q" secondAttribute="trailing" id="blS-Jk-KVE"/>
                             <constraint firstItem="B5r-yZ-f9j" firstAttribute="top" secondItem="x1r-zz-EVF" secondAttribute="bottom" constant="20" id="cIt-IJ-JgU"/>
-                            <constraint firstItem="Pzz-WV-vOK" firstAttribute="top" secondItem="KtZ-Tb-wzi" secondAttribute="bottom" constant="20" id="cSa-h0-8cU"/>
+                            <constraint firstItem="Pzz-WV-vOK" firstAttribute="top" secondItem="KtZ-Tb-wzi" secondAttribute="bottom" id="cSa-h0-8cU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="B5r-yZ-f9j" secondAttribute="trailing" id="gxm-QM-ZEW"/>
                             <constraint firstItem="5iD-gc-dcP" firstAttribute="centerY" secondItem="2kY-wC-XBX" secondAttribute="centerY" id="hX2-Ai-fvP"/>
                             <constraint firstItem="2kY-wC-XBX" firstAttribute="width" secondItem="BCI-aa-aEx" secondAttribute="width" id="hXS-hH-F5e"/>
-                            <constraint firstItem="tuz-6S-VrY" firstAttribute="top" secondItem="dMb-4Y-C8v" secondAttribute="bottom" constant="43" id="icP-Dj-e0O"/>
                             <constraint firstItem="CE8-35-J0Q" firstAttribute="trailing" secondItem="B5r-yZ-f9j" secondAttribute="trailing" id="olY-3E-XVB"/>
                             <constraint firstItem="Uc6-Km-Eoz" firstAttribute="leading" secondItem="5iD-gc-dcP" secondAttribute="leading" id="tAE-8W-hwq"/>
                             <constraint firstItem="MgA-9W-6bl" firstAttribute="leading" secondItem="sej-GW-p4u" secondAttribute="leading" id="tP6-ad-pZw"/>
-                            <constraint firstItem="2kY-wC-XBX" firstAttribute="top" secondItem="BCI-aa-aEx" secondAttribute="bottom" constant="20" id="uyo-3H-vUf"/>
+                            <constraint firstItem="2kY-wC-XBX" firstAttribute="top" secondItem="BCI-aa-aEx" secondAttribute="bottom" constant="10" id="uyo-3H-vUf"/>
                             <constraint firstItem="9FM-yC-ZtG" firstAttribute="leading" secondItem="15J-6v-8jL" secondAttribute="leadingMargin" id="vUT-MI-G54"/>
-                            <constraint firstItem="CE8-35-J0Q" firstAttribute="top" secondItem="B5r-yZ-f9j" secondAttribute="bottom" constant="20" id="xde-ly-z4S"/>
+                            <constraint firstItem="CE8-35-J0Q" firstAttribute="top" secondItem="B5r-yZ-f9j" secondAttribute="bottom" constant="10" id="xde-ly-z4S"/>
                             <constraint firstItem="KtZ-Tb-wzi" firstAttribute="centerX" secondItem="15J-6v-8jL" secondAttribute="centerX" id="xrb-b4-GQS"/>
                         </constraints>
                     </view>
